--- a/style.css
+++ b/style.css
@@ -503,16 +503,44 @@ main{
         font-size: x-small;
     }
 
+    .free_delivery{
+        width: 80vw;
+    }
+
+    .free{
+        color: #f85050;
+        font-weight: 100;
+        font-size: medium;
+    }
+    
+    .total_price{
+        margin: 0px;
+        font-size: medium;
+    }
+
+    .btn_container{
+        margin: 10px;
+        background-color: #f85050;
+        width: 85%;
+        padding: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius:  1ch;
+    }
+
 }
 
 @media screen and (max-width: 315px) {
 
     .head{
-        width: 70vw;
+        width: 60vw;
+        text-align: center;
     }
 
     .container1{
         width: 65vw;
+        padding: 15px;
     }
 
     .popular_con{
@@ -533,7 +561,7 @@ main{
 
     .discount{
         font-size: x-small;
-        padding: 3px;
+        padding: 2px;
     }
 
     .size_color{
